--- a/styles.css
+++ b/styles.css
@@ -290,7 +290,7 @@ body .menu .dishes .dish .dish-container {
   transition-delay: 0.01s;
 }
 body .menu .dishes .dish .dish-container .main {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 600;
 }
 body .menu .dishes .dish .dish-container .side {
@@ -342,8 +342,8 @@ body .menu .dishes .dish:active > .selected {
 }
 body .menu .dishes .dish:active > .selected .fa-solid.fa-circle-check {
   animation-name: spin;
-  animation-duration: 0.39s;
-  animation-delay: 0.01s;
+  animation-duration: 0.4s;
+  animation-delay: 0.1s;
   animation-fill-mode: forwards;
 }
 body .menu .dishes#entrees {
@@ -443,439 +443,26 @@ body footer #email span .email_link {
 }
 
 @media (min-width: 640px) {
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  @keyframes loading {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  /*https://programmersportal.com/how-to-hide-a-div-after-5-seconds-in-css/*/
-  @keyframes hideMe {
-    0% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-      z-index: -1;
-    }
-  }
-  @keyframes showDish {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(-5px);
-    }
-  }
-  body {
-    font-family: "Roboto";
-    height: 100vh;
-    width: 100vw;
-  }
-  body .loader {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    background-color: black;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    animation: hideMe 3s forwards;
-  }
-  body .loader .spinner {
-    width: 100px;
-    height: 100px;
-    border: 5px solid white;
-    border-radius: 50%;
-    border-top: 5px solid green;
-    border-bottom: 5px solid red;
-    animation: loading 0.5s ease infinite;
-  }
-  body header {
-    padding-top: 10px;
-    display: flex;
-    align-items: center;
-  }
-  body header .fa-sharp.fa-solid.fa-arrow-left {
-    text-indent: 20px;
-    text-decoration: none;
-    color: black;
-  }
-  body header .logo {
-    display: block;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-  }
-  body .fore-image {
-    margin-top: 10px;
-    object-fit: cover;
-    height: 270px;
-    width: 100%;
-  }
-  body .location {
-    display: flex;
-    margin-top: 10px;
-    text-indent: 15px;
-    padding: 20px 0;
-    background-color: rgb(234, 234, 234);
-    border-top: 3px solid gainsboro;
-    align-items: center;
-    justify-content: center;
-  }
-  body .booking {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(246, 246, 246);
-    text-align: center;
-  }
-  body .booking p {
-    font-size: 18px;
-  }
-  body .booking .explore {
-    margin: 15px auto;
-    height: 40px;
-    cursor: pointer;
-    border-radius: 30px;
-    padding: 0 10px;
-    background: linear-gradient(#FF79DA, #9356DC);
-    color: white;
-    width: 50%;
-  }
-  body .booking .explore:hover {
-    box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);
-    background: linear-gradient(rgba(255, 121, 218, 0.9), rgba(147, 86, 220, 0.9));
-  }
-  body .howItWorks h2 {
-    text-indent: 3%;
-  }
-  body .howItWorks__options {
-    display: flex;
-    flex-direction: column;
-    gap: 40px 0;
-    padding: 0 20px;
-  }
-  body .howItWorks__options__option {
-    display: flex;
-    align-items: center;
-    background-color: #f6f6f6;
-    font-size: 16px;
-    cursor: pointer;
-    padding: 30px;
-    border-radius: 30px;
-    box-shadow: 5px 5px 5px 5px rgb(232, 232, 232);
-  }
-  body .howItWorks__options__option .material-symbols-sharp {
-    position: relative;
-    left: -20px;
-    color: gray;
-    align-self: center;
-  }
-  body .howItWorks__options__option .material-symbols-sharp--purple {
-    position: relative;
-    left: -20px;
-    color: #9356DC;
-    align-self: center;
-  }
-  body .howItWorks__options__option .counter-circle {
-    position: relative;
-    left: -23px;
-    top: 2px;
-    align-self: center;
-  }
-  body .howItWorks__options__option .counter-circle .material-symbols-sharp {
-    color: #9356DC;
-  }
-  body .restaurants-container {
-    display: flex;
-    flex-direction: column;
-    background-color: #f6f6f6;
-    margin-top: 70px;
-    padding-bottom: 50px;
-  }
-  body .restaurants-container h2 {
-    padding-top: 20px;
-    text-indent: 3%;
-  }
-  body .restaurants-container__restaurants {
-    display: flex;
-    flex-direction: column;
-    padding: 0px 3%;
-  }
-  body .restaurants-container__restaurants__restaurant {
-    height: 220px;
-    width: 100%;
-    border-radius: 15px;
-    background-color: white;
-    box-shadow: 5px 5px 5px 5px rgb(232, 232, 232);
-  }
-  body .restaurants-container__restaurants__restaurant__image {
-    height: 150px;
-    width: 100%;
-  }
-  body .restaurants-container__restaurants__restaurant__image img {
-    height: 100%;
-    width: 100%;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    object-fit: cover;
-  }
-  body .restaurants-container__restaurants__restaurant__image .new-restaurant {
-    position: relative;
-    top: -135px;
-    left: calc(100% - 90px);
-    padding: 2px 20px;
-    background: #99E2D0;
-    color: rgb(0, 135, 102);
-  }
-  body .restaurants-container__restaurants__restaurant h4 {
-    line-height: 2px;
-    text-indent: 12px;
-  }
-  body .restaurants-container__restaurants__restaurant p {
-    text-align: left;
-    text-indent: 12px;
-    line-height: 2px;
-  }
-  body .restaurants-container__restaurants .fa-heart {
-    position: relative;
-    left: calc(100% - 60px);
-    top: -50px;
-    z-index: 1;
-    cursor: pointer;
-    transition-property: -webkit-background-clip, font-weight, background-image, -webkit-text-fill-color;
-    transition-duration: 2s;
-    transition-timing-function: ease-out;
-    width: fit-content;
-  }
-  body .restaurants-container__restaurants .fa-heart:hover {
+  .restaurants-container__restaurants .fa-heart:hover {
     /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
     -webkit-background-clip: text;
     font-weight: 900;
     background-image: linear-gradient(#9356DC, #FF79DA);
     -webkit-text-fill-color: transparent;
   }
-  body .menu {
-    position: relative;
-    top: -65px;
-    border-top-left-radius: 40px;
-    border-top-right-radius: 40px;
-    background-color: #f6f6f6;
-    margin-bottom: -65px;
-  }
-  body .menu .restaurant-logo {
-    display: flex;
-    align-items: first baseline;
-    justify-content: space-between;
-    padding: 20px 20px;
-  }
-  body .menu .restaurant-logo h1 {
-    font-family: "Shrikhand";
-    font-size: 22px;
-  }
-  body .menu .dishes {
-    opacity: 0;
-  }
-  body .menu .dishes .category {
-    text-indent: 20px;
-  }
-  body .menu .dishes .partial-underline {
-    position: relative;
-    border: 1px solid #99E2D0;
-    width: 40px;
-    left: 19px;
-  }
-  body .menu .dishes .dish {
-    display: flex;
-    align-items: center;
-    margin: 15px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 15px;
-    cursor: pointer;
-    box-shadow: 5px 5px 5px 5px rgb(232, 232, 232);
-    overflow: hidden;
-  }
-  body .menu .dishes .dish .dish-container {
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    padding: 15px 0 15px 10px;
-    flex-basis: 100%;
-    margin-right: -59.6px;
-    transition-property: margin-right;
-    transition-duration: 0.3s;
-    transition-delay: 0.01s;
-  }
-  body .menu .dishes .dish .dish-container .main {
-    font-size: 20px;
-    font-weight: 600;
-  }
-  body .menu .dishes .dish .dish-container .side {
-    font-size: 14px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-  body .menu .dishes .dish .cost {
-    display: flex;
-    align-items: center;
-    align-self: last baseline;
-    transform: translateX(59.6px);
-    font-size: 14px;
-    min-width: 35px;
-    padding: 16px 0;
-    margin-right: 17px;
-    margin-left: 6px;
-    transition-property: transform;
-    transition-duration: 0.3s;
-    transition-delay: 0.01s;
-  }
-  body .menu .dishes .dish .cost .fa-euro-sign {
-    position: relative;
-    top: 0px;
-    font-size: 14px;
-    left: 2px;
-  }
-  body .menu .dishes .dish .selected {
-    display: flex;
-    border: 1px solid #99E2D0;
-    align-items: center;
-    align-self: stretch;
-    padding: 0px 17px;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    background: #99E2D0;
-    transform: translateX(59.6px);
-    transition-property: transform;
-    transition-duration: 0.4s;
-  }
-  body .menu .dishes .dish .selected .fa-solid.fa-circle-check {
-    color: #fff;
-    border-radius: 50%;
-  }
-  body .menu .dishes .dish:hover > .dish-container {
+  .menu .dishes .dish:hover > .dish-container {
     margin-right: 0;
   }
-  body .menu .dishes .dish:hover > .cost {
+  .menu .dishes .dish:hover > .cost {
     transform: translateX(0);
   }
-  body .menu .dishes .dish:hover > .selected {
+  .menu .dishes .dish:hover > .selected {
     transform: translateX(0);
   }
-  body .menu .dishes .dish:hover > .selected .fa-solid.fa-circle-check {
+  .menu .dishes .dish:hover > .selected .fa-solid.fa-circle-check {
     animation-name: spin;
-    animation-duration: 0.3s;
-    animation-delay: 0.01s;
+    animation-duration: 0.4s;
+    animation-delay: 0.1s;
     animation-fill-mode: forwards;
-  }
-  body .menu .dishes#entrees {
-    animation-delay: 1s;
-  }
-  body .menu .dishes#main_dish {
-    animation-delay: 1.5s;
-  }
-  body .menu .dishes#desserts {
-    animation-delay: 2s;
-  }
-  body .menu .button-container {
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 40px;
-  }
-  body .menu .button-container button {
-    width: 42%;
-    height: 40px;
-    border-radius: 22px;
-    background: linear-gradient(#FF79DA, #9356DC);
-    color: white;
-    cursor: pointer;
-  }
-  body .menu .button-container button:hover {
-    box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);
-    background: linear-gradient(rgba(255, 121, 218, 0.9), rgba(147, 86, 220, 0.9));
-  }
-  body footer {
-    background-color: #333333;
-    display: flex;
-    flex-direction: column;
-  }
-  body footer .footer-logo {
-    width: 30%;
-    margin-left: 5%;
-    margin-top: 20px;
-    filter: invert(100%);
-  }
-  body footer .suggest-a-restaurant {
-    margin-top: 10px;
-    margin-left: 5%;
-    filter: invert(100%);
-  }
-  body footer .suggest-a-restaurant span {
-    margin-left: 8px;
-    font-size: medium;
-    cursor: pointer;
-  }
-  body footer .become-a-partner {
-    margin-top: 10px;
-    margin-left: 5%;
-    filter: invert(100%);
-  }
-  body footer .become-a-partner span {
-    margin-left: 3px;
-    font-size: medium;
-    cursor: pointer;
-  }
-  body footer .legal {
-    margin-top: 10px;
-    margin-left: 5%;
-    filter: invert(100%);
-  }
-  body footer .legal span {
-    margin-left: 3px;
-    font-size: medium;
-    cursor: pointer;
-  }
-  body footer .contact {
-    margin-top: 10px;
-    margin-left: 5%;
-    filter: invert(100%);
-    margin-bottom: 10px;
-  }
-  body footer .contact a {
-    margin-left: 3px;
-    font-size: medium;
-    cursor: pointer;
-  }
-  body footer #email {
-    margin-left: 5%;
-    filter: invert(100%);
-    display: none;
-    margin-bottom: 10px;
-  }
-  body footer #email:target {
-    display: block;
-  }
-  body footer #email span {
-    margin-left: 3px;
-    font-size: medium;
-  }
-  body footer #email span .email_link {
-    text-decoration: underline;
-    cursor: pointer;
   }
 }/*# sourceMappingURL=styles.css.map */
