--- a/styles.css
+++ b/styles.css
@@ -103,12 +103,12 @@ header .fa-arrow-left {
 .location {
   display: flex;
   margin-top: 10px;
-  text-indent: 15px;
   padding: 20px 0;
   background-color: rgb(234, 234, 234);
   border-top: 3px solid gainsboro;
   align-items: center;
   justify-content: center;
+  gap: 0 10px;
 }
 
 .booking {
