--- a/styles.scss
+++ b/styles.scss
@@ -166,12 +166,12 @@ header
 {
   display: flex;
   margin-top: 10px;
-  text-indent: 15px;
   padding: 20px 0;
   background-color: rgb(234, 234, 234);
   border-top: 3px solid gainsboro;
   align-items: center;
   justify-content: center;
+  gap: 0 10px;
 }
 
 .booking 
