--- a/styles.css
+++ b/styles.css
@@ -259,7 +259,7 @@ header .fa-arrow-left {
   padding: 20px 20px;
 }
 .menu__restaurant-logo h1 {
-  font-family: "Shrikhand";
+  font-family: "Shrikhand" !important;
   font-display: swap;
   font-size: 22px;
 }
