--- a/styles.scss
+++ b/styles.scss
@@ -368,7 +368,7 @@ header
 
     h1 
     {
-      font-family: "Shrikhand";
+      font-family: "Shrikhand" !important;
       font-display: swap;
       font-size: 22px;
     }
