--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ a:active, a:focus, a:hover, a:visited, a {
   }
 }
 body {
-  font-family: "Roboto";
+  font-family: Roboto;
   height: 100vh;
   width: 100vw;
 }
@@ -259,7 +259,7 @@ header .fa-arrow-left {
   padding: 20px 20px;
 }
 .menu__restaurant-logo h1 {
-  font-family: "Shrikhand" !important;
+  font-family: Shrikhand !important;
   font-size: 22px;
 }
 .menu__dishes {
@@ -296,11 +296,11 @@ header .fa-arrow-left {
   transition-delay: 0.01s;
 }
 .menu__dishes__dish__container .main {
-  font-size: 18px;
+  font-size: 19px;
   font-weight: 600;
 }
 .menu__dishes__dish__container .side {
-  font-size: 14px;
+  font-size: 13.5px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
