--- a/styles.scss
+++ b/styles.scss
@@ -99,7 +99,7 @@ a
 
 body 
 {
-  font-family: "Roboto";
+  font-family: Roboto;
   height: 100vh;
   width: 100vw;
 }
@@ -368,7 +368,7 @@ header
 
     h1 
     {
-      font-family: "Shrikhand" !important;
+      font-family: Shrikhand !important;
       font-size: 22px;
     }
   }
@@ -414,13 +414,13 @@ header
 
         .main 
         {
-          font-size: 18px;
+          font-size: 19px;
           font-weight: 600;
         }
 
         .side 
         {
-          font-size: 14px;
+          font-size: 13.5px;
           text-overflow: ellipsis;
           white-space:nowrap;
           overflow: hidden;
