--- a/styles.css
+++ b/styles.css
@@ -239,9 +239,11 @@ header .fa-arrow-left {
 .restaurants-container__restaurants .fa-heart:active {
   /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
   -webkit-background-clip: text; /*Cuts the heart icon out from the whole image*/
+  /*-moz-background-clip: text;*/
   font-weight: 900; /*Without this, only the outline of the heart will be colored*/
   background-image: linear-gradient(#9356DC, #FF79DA); /*Colors the heart*/
   -webkit-text-fill-color: transparent; /*Makes the transparent color of black the abover color*/
+  /*-moz-text-fill-color:transparent;*/
 }
 
 .menu {
@@ -254,13 +256,16 @@ header .fa-arrow-left {
 }
 .menu__restaurant-logo {
   display: flex;
-  align-items: stretch;
   justify-content: space-between;
-  padding: 40px 20px;
+  padding: 20px 20px;
+}
+.menu__restaurant-logo h2 {
+  font-family: Shrikhand;
+  margin-right: 45px;
 }
 .menu__restaurant-logo .fa-heart {
   position: relative;
-  top: 10.5px;
+  top: 35px;
 }
 .menu__dishes {
   opacity: 0;
@@ -385,8 +390,7 @@ footer {
 }
 footer .footer-logo {
   width: 30%;
-  margin-left: 5%;
-  margin-top: 20px;
+  margin: 30px 0 20px 5%;
   filter: invert(100%);
 }
 footer .suggest-a-restaurant {
@@ -452,9 +456,11 @@ footer #email span .email_link {
   .restaurants-container__restaurants .fa-heart:hover {
     /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
     -webkit-background-clip: text; /*Cuts the heart icon out from the whole image*/
+    -moz-background-clip: text;
     font-weight: 900; /*Without this, only the outline of the heart will be colored*/
     background-image: linear-gradient(#9356DC, #FF79DA); /*Colors the heart*/
     -webkit-text-fill-color: transparent; /*Makes the transparent color of black the abover color*/
+    -moz-text-fill-color: transparent;
   }
   .menu__dishes__dish:hover > .menu__dishes__dish__container {
     margin-right: 0;
