--- a/styles.scss
+++ b/styles.scss
@@ -339,12 +339,13 @@ header
         /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
 
         -webkit-background-clip: text; /*Cuts the heart icon out from the whole image*/
-        
+        /*-moz-background-clip: text;*/
         font-weight: 900; /*Without this, only the outline of the heart will be colored*/
         
         background-image: linear-gradient($primary, $secondary);  /*Colors the heart*/
         
         -webkit-text-fill-color: transparent; /*Makes the transparent color of black the abover color*/
+        /*-moz-text-fill-color:transparent;*/
       }
     }    
   }
@@ -362,14 +363,19 @@ header
   &__restaurant-logo 
   {
     display: flex;
-    align-items:stretch;
     justify-content: space-between;
-    padding: 40px 20px;
+    padding: 20px 20px;
+
+    h2
+    {
+      font-family: Shrikhand;
+      margin-right: 45px;
+    }
 
     .fa-heart
     {
       position: relative;
-      top: 10.5px;
+      top: 35px;
     }
   }
 
@@ -549,8 +555,7 @@ footer
   .footer-logo 
   {
     width: 30%;
-    margin-left: 5%;
-    margin-top: 20px;
+    margin: 30px 0 20px 5%;
     filter: invert(100%);
   }
 
@@ -652,12 +657,14 @@ footer
           /*Source:https://stackoverflow.com/questions/65774048/how-to-add-a-gradient-color-to-an-icon-with-no-border*/
           
           -webkit-background-clip: text;  /*Cuts the heart icon out from the whole image*/
-          
+          -moz-background-clip: text;
+
           font-weight: 900; /*Without this, only the outline of the heart will be colored*/
           
           background-image: linear-gradient($primary, $secondary);  /*Colors the heart*/
           
           -webkit-text-fill-color: transparent; /*Makes the transparent color of black the abover color*/
+          -moz-text-fill-color:transparent;
         }
       }
     }
